<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group
        android:id="@+id/group_1"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_published"
            android:icon="@drawable/ic_cloud_done_black_24dp"
            android:title="@string/text_published" />
        <item
            android:id="@+id/nav_draft"
            android:icon="@drawable/ic_mode_edit_black_24dp"
            android:title="@string/text_drafts" />
        <item
            android:id="@+id/nav_activities"
            android:icon="@drawable/ic_notifications_black_24dp"
            android:title="@string/text_activities" />
    </group>

    <group
        android:id="@+id/group_2"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_app_settings"
            android:icon="@drawable/ic_settings_black_24dp"
            android:title="@string/text_app_settings" />
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/ic_free_breakfast_black_24dp"
            android:title="@string/title_about" />
    </group>

</menu>
