<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:paddingLeft="10dp"
    android:orientation="vertical">

    <RadioButton
        android:id="@+id/rb_publish_now"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_publish_now"
        android:checked="true"/>

    <RadioButton
        android:id="@+id/rb_schedule_post"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_schedule_post"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tv_date_picker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:textColor="#000000"
            android:background="#d3d3d3"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
            android:text="@string/text_date"/>

    </RelativeLayout>

    <Space
        android:layout_width="1dp"
        android:layout_height="10dp" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tv_time_picker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:textColor="#000000"
            android:background="#d3d3d3"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
            android:text="@string/text_now"/>

    </RelativeLayout>

</LinearLayout>